Fixed product edition display on small screen

--- a/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
+++ b/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
@@ -2763,10 +2763,6 @@ $mobile-menu-height: 2.6rem !default;
   }
 
   .developer-mode {
-    .content-div {
-      padding: 0 0 4.5rem;
-    }
-
     &.debug-toolbar-hidden {
       .product-page {
         .product-footer {
